Complete java 17 build